Performance optimizations